fix errori battitura

--- a/Relazione/sezioni/ValidazioneTest.tex
+++ b/Relazione/sezioni/ValidazioneTest.tex
@@ -34,8 +34,8 @@ A partire dalla struttura in HTML si è cercato di rendere più efficiente la na
 
 Un occhio di riguardo si è avuto per tutte quelle persone che presentano difficoltà visive. Si è scelto di mantenere sempre un alto contrasto tra il colore di sfondo ed il colore delle scritte, per non intaccare la leggibilità delle ultime, sono stati inseriti gli attributi tabindex, gli span di lingua, gli attributi alt per facilitare la lettura dei contenuti con l'uso di screen reader.\\
 
-In particolare sono stati eseguiti dei test che simulano la visione con diverse tipologie di daltonismo. Le immagini, di seguito riportate, sono state generate con l'utilizzo del simulatore Coblis, disponibile online al link \url{https://www.color-blindness.com/coblis-color-blindness-simulator/}.
-
+In particolare sono stati eseguiti dei test che simulano la visione con diverse tipologie di daltonismo. Le immagini, di seguito riportate, sono state generate con l'utilizzo del simulatore Coblis, disponibile online al link \url{https://www.color-blindness.com/coblis-color-blindness-simulator/}.\\
+\\
 \captionof{figure}{Homepage del sito}
 \includegraphics[width=8pc]{./img/homepage-normal.png} \includegraphics[width=8pc]{./img/homepage-protanopia.png} \includegraphics[width=8pc]{./img/homepage-deuteranopia.png} \includegraphics[width=8pc]{./img/homepage-tritanopia.png}\\
 
