Fix suddivisione lavoro

--- a/Relazione/sezioni/SuddivisioneLavoro.tex
+++ b/Relazione/sezioni/SuddivisioneLavoro.tex
@@ -41,7 +41,7 @@ Vengono elencate nel dettaglio le varie parti:
     \item Riccardo Conte:
     \item Giacomo Corrò: sezione 2.1 Utenza, parte della sezione 2.2 Casi d'uso , sezione 3 Progettazione.
     \item Giulia Fiorese: sezione 1 Introduzione, parte della sezione 3.3 Accessibilità, sezione 6 Validazione e Fase di Test;
-    \item Erik Tabacchi:
+    \item Erik Tabacchi: sezione 5 Presentazione.
 \end{itemize}
 Tutte le parti della relazione non elencate sono state scritte durante gli incontri, quindi tutto il gruppo ha preso parte alla stesura.
 \pagebreak
