aggiunte lettere accentate in controlli di nomi e testi

--- a/Relazione/sezioni/SuddivisioneLavoro.tex
+++ b/Relazione/sezioni/SuddivisioneLavoro.tex
@@ -38,7 +38,7 @@ Di seguito si elencano le parti realizzate da ciascun componente del gruppo:
 Per quanto riguarda la relazione, ognuno ha scritto la parte di analisi relativa alla propria sezione del sito. Le parti generali della relazione sono state scritte da tutti i membri del gruppo.
 Vengono elencate nel dettaglio le varie parti:
 \begin{itemize}
-    \item Riccardo Conte:
+    \item Riccardo Conte: sezione 4 Implementazione.
     \item Giacomo Corrò: sezione 2.1 Utenza, parte della sezione 2.2 Casi d'uso , sezione 3 Progettazione.
     \item Giulia Fiorese: sezione 1 Introduzione, parte della sezione 3.3 Accessibilità, sezione 6 Validazione e Fase di Test;
     \item Erik Tabacchi: sezione 5 Presentazione.
